--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "express-bootstrap-middleware-test",
   "version": "1.0.0",
   "description": "bootstrapping middlewares in a specificed order",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {},
   "repository": {
     "type": "git",
