--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "express-bootstrapper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "bootstrapping express application in a specificed order",
+  "engines": {
+    "node": ">=4.4.5"
+  },
   "main": "express-bootstrapper.js",
   "scripts": {
-    "test": "cd example && mocha"
+    "test": "cd test && mocha *.spec.js"
   },
   "repository": {
     "type": "git",
